<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".TemarioActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/scroll_desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/theme_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/forma_boton_temario_2"
                android:fontFamily="@font/overpass"
                android:text="@string/theme_1"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="24dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/theme_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/forma_boton_temario_2"
                android:fontFamily="@font/overpass"
                android:text="@string/theme_2"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="24dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/theme_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/forma_boton_temario_2"
                android:fontFamily="@font/overpass"
                android:text="@string/lorem_ipsum"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="24dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/theme_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/forma_boton_temario_2"
                android:fontFamily="@font/overpass"
                android:text="@string/lorem_ipsum"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="24dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/theme_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/forma_boton_temario_2"
                android:fontFamily="@font/overpass"
                android:text="@string/lorem_ipsum"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="24dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/theme_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/forma_boton_temario_2"
                android:fontFamily="@font/overpass"
                android:text="@string/lorem_ipsum"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="24dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/theme_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/forma_boton_temario_2"
                android:fontFamily="@font/overpass"
                android:text="@string/lorem_ipsum"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="24dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/theme_8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/forma_boton_temario_2"
                android:fontFamily="@font/overpass"
                android:text="@string/lorem_ipsum"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="24dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/theme_9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/forma_boton_temario_2"
                android:fontFamily="@font/overpass"
                android:text="@string/lorem_ipsum"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="24dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/theme_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/forma_boton_temario_2"
                android:fontFamily="@font/overpass"
                android:text="@string/lorem_ipsum"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="24dp" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>